testdata/zkc/invalid/basic_invalid_04.zkc
;;error:2:14-17:unknown type
function f(x:int) -> (r:u8) {
  r = 0
  return
}
